--- a/UserNavTemplate.css
+++ b/UserNavTemplate.css
@@ -7,6 +7,7 @@ body, html {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 #sidebar {
     background-color: #FC783F;
@@ -274,9 +275,10 @@ span {
 
 #body-content {
     min-width: 100%;
-    background-color: #fff;
     display: flex;
+    flex-grow: 1;
     flex-direction: column;
+    overflow-y: auto;
 }
 
 /* Profile Dropdown */
