--- a/UserNavTemplate.css
+++ b/UserNavTemplate.css
@@ -7,6 +7,7 @@ body, html {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 #sidebar {
     background-color: #FC783F;
