--- a/UserDash.css
+++ b/UserDash.css
@@ -1,3 +1,6 @@
+    body, html {
+        font-family: 'Poppins', sans-serif;
+    }
     .Reader-Home {
         overflow-y: auto;
         height: 890px;
@@ -169,7 +172,7 @@
     }
 
     .Section .left {
-        width:68%;
+        width:65%;
     }
 
     .Section h3 {
@@ -192,7 +195,7 @@
     }
 
     .NewReleaseSectionContainer {
-        padding-bottom: 5%;
+        padding-bottom: 10%;
     }
 
     .Books {
@@ -224,7 +227,7 @@
         width: 430px;
         background-color: white;
         box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
-        margin-bottom: 10%;
+        margin-bottom: 15%;
         border-radius: 10px;
         text-align: center;
         padding: 10%;
