--- a/UserNavTemplate.css
+++ b/UserNavTemplate.css
@@ -278,7 +278,7 @@ span {
     display: flex;
     flex-grow: 1;
     flex-direction: column;
-    /* overflow-y: auto; */
+    overflow-y: auto;
 }
 
 /* Profile Dropdown */
