--- a/UserDash.css
+++ b/UserDash.css
@@ -1,8 +1,16 @@
+    body, html {
+        font-family: 'Poppins', sans-serif;
+    }
+
     .Reader-Home {
         overflow-y: auto;
         height: 890px;
         display: flex;
         flex-direction: column;
+    }
+
+    .bottom-section {
+        overflow-y: auto;
     }
 
     .bottom-section {
@@ -51,10 +59,10 @@
 
     .sort-btn {
         font-size: 16px;
-        padding: 10px 20px;
+        padding: 10px 15px;
         border: none;
         border-radius: 30px;
-        background-color: #ff6600; 
+        background-color: #FC783F; 
         color: white; 
         cursor: pointer;
         transition: background-color 0.3s ease;
@@ -137,7 +145,7 @@
     }
 
     .GenreSection h4 {
-        font-size: 25px;
+        font-size: 24px;
         font-weight: bold;
     }
 
@@ -155,12 +163,12 @@
         display: flex;
         flex-wrap: wrap;
         /* flex-direction: column; */
-        background-color: orange;
+        background-color: #FC783F;
         width: 255px;
         height: auto;
         color: white;
         border-radius: 10px;
-        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+        /* box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5); */
         padding: 1%;
     }
 
@@ -169,7 +177,7 @@
     }
 
     .Section .left {
-        width:68%;
+        width:65%;
     }
 
     .Section h3 {
@@ -188,11 +196,11 @@
         justify-content: center;
         margin-bottom: 5%;
         border-radius: 10px;
-        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+        /* box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5); */
     }
 
     .NewReleaseSectionContainer {
-        padding-bottom: 5%;
+        padding-bottom: 10%;
     }
 
     .Books {
@@ -223,8 +231,8 @@
         height: 689px;
         width: 430px;
         background-color: white;
-        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
-        margin-bottom: 10%;
+        /* box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5); */
+        margin-bottom: 15%;
         border-radius: 10px;
         text-align: center;
         padding: 10%;
@@ -320,7 +328,7 @@
         padding: 10px 20px;
         border: none;
         border-radius: 30px;
-        background-color: #ff6600; 
+        background-color: #FC783F; 
         color: white; 
         cursor: pointer;
         transition: background-color 0.3s ease;
@@ -362,7 +370,7 @@
         padding: 10px 20px;
         border: none;
         border-radius: 30px;
-        background-color: #ff6600; 
+        background-color: #FC783F; 
         color: white; 
         cursor: pointer;
         transition: background-color 0.3s ease;
