--- a/Browse.css
+++ b/Browse.css
@@ -1,4 +1,4 @@
-.content-box {
+.browse-box {
     background-color: #f5f5f5;
     width: 100%;
     height: 65vh;
@@ -131,7 +131,7 @@
     margin-top: 1em;
     border-radius: 30px;
     margin-bottom: 1em; 
-  
+    padding-right: 15px;
 }
 #stats-btn2, #addtofav-btn {
     border: none;
@@ -139,6 +139,8 @@
     margin-top: 1em;
     border-radius: 30px;
     margin-bottom: 1em; 
+    padding-right: 15px;
+
   
 }
 #stats-btn3, #addtofav-btn {
@@ -147,6 +149,7 @@
     margin-top: 1em;
     border-radius: 30px;
     margin-bottom: 1em; 
+    padding-right: 10px;
   
 }
 #bookstaticon{
