--- a/Browse.css
+++ b/Browse.css
@@ -1,7 +1,9 @@
 .browse-box {
     background-color: #f5f5f5;
     width: 100%;
-    height: 65vh;
+    height: 80vh;
+    overflow: hidden    ;
+    
 }
 
 .container {
