--- a/Browse.css
+++ b/Browse.css
@@ -95,8 +95,40 @@
     overflow-x: hidden;
     height: 100%;
     background-color: #f5f5f5;
+
+}
+/* Stacking layout for screens 1600px wide or smaller */
+@media (max-width: 1600px) {
+    #User-books {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .book-container {
+        width: 80%; /* Adjust width as needed */
+        margin-bottom: 20px;
+    }
 }
 
+@media (max-width: 1600px) {
+        .UserBrowsebox {
+        height: auto;
+        overflow-x: auto;
+        overflow-y: hidden;
+        white-space: nowrap; /* Prevents wrapping */
+    }
+
+
+    .browse-genre {
+        display: flex;
+        justify-content: flex-start; /* Align items to the left */
+        overflow-x: auto; /* Makes the container horizontally scrollable */
+        flex-wrap: nowrap; /* Prevents icons from wrapping */
+    }
+    .pendbox{
+        display: block;
+    }
+}
 #Book-Author{
     font-size: 14px;
     margin-top: -10px;
