--- a/HistoryStyle.css
+++ b/HistoryStyle.css
@@ -19,6 +19,8 @@
     width: 100%;
     height: 63svh;
     margin-top: 3.6em;
+	max-height: 400px; /* Adjust the height as needed */
+    overflow-y: auto;  /* Enables vertical scrolling */
 }
 
 
@@ -156,31 +158,3 @@ hr {
     color: #e55a00;
     text-decoration: underline;
 }
-
-/* Pagination */
-.History-pagination {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 51.1px;
-}
-
-.History-pagination a {
-    text-decoration: none;
-    color: #7d6966;
-    padding: 5px 15px;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
-
-/* .History-pagination a:hover {
-    background-color: #f0f0f0;
-} */
-
-.History-pagination span {
-    padding: 0 10px;
-}
-.History-pagination .active {
-    background-color: #e55a00;
-    color: white;
-} 
