--- a/TransactionsStyle.css
+++ b/TransactionsStyle.css
@@ -76,6 +76,8 @@
 .action-buttons {
     display: flex;
     gap: 10px; /* Space between buttons */
+    margin-right: 10em;
+    
 }
 
 .approve-btn, .decline-btn {
