--- a/ReaderStyle.css
+++ b/ReaderStyle.css
@@ -8,7 +8,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     background-color: #f5f5f5;
 }
 
@@ -47,20 +46,20 @@ hr {
 }
 
 #d1 {
-    background-color: #ffff;
     display: flex;
+    background-color: #ffff;
     flex-direction: column; 
-    align-items: center; 
+    align-items: start; 
 }
 
 /* Search */
 .input-area {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
     gap: 10px; 
     margin-top: 50px;
     margin-bottom: 10px; 
+    margin-left: 5%;
 }
 .search-bar {
     position: relative;
@@ -108,9 +107,7 @@ hr {
 .sort-btn img, .filter-btn img {
     margin: 0 5px; 
 }
-/* .sort-btn:hover, .filter-btn:hover {
-    background-color: #e55a00; 
-} */
+
 .reader-table {
     width: 95%; 
     margin: 20px auto; 
@@ -118,22 +115,21 @@ hr {
 }
 .reader-table th,
 .reader-table td {
-    width: 30%; 
     text-align: left; 
     padding: 20px; 
     border: none; 
 }
 .reader-table th {
-    background-color: #f0f0f0; 
+    background-color: #ff8533;
     font-weight: bold;
+    position:sticky;
+    top:0;
 }
 /* Horizontal borders */
 .reader-table tr {
     border-bottom: 1px solid #7d6966;
 }
-/* .reader-table tr:last-child {
-    border-bottom: none; 
-} */
+
 .act a{
     color: #e55a00;
     
@@ -154,9 +150,8 @@ hr {
     border-radius: 5px; /* Rounded corners */
     transition: background-color 0.3s; /* Smooth transition */
 }
-/* .Reader-pagination a:hover {
-    background-color: #f0f0f0; 
-} */
+
+
 .Reader-pagination .active {
     background-color: #e55a00; /* Active page color */
     color: white; /* Active page text color */
