--- a/HistoryStyle.css
+++ b/HistoryStyle.css
@@ -4,20 +4,12 @@
     height: 65vh;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #f5f5f5;
-}
 
 .History-box {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-height: 600px; /* Set a maximum height for scrolling */
     overflow-y: auto;  /* Enables vertical scrolling */
     margin-top: 3.6em; /* Space above the History box */
 }
@@ -28,17 +20,6 @@ hr {
     border: none;
     width: 100%;
     margin: 0 auto;
-}
-
-
-/* Search */
-.input {
-    display: flex;
-    justify-content: flex-start;
-    gap: 10px;
-    position: relative;
-    right: 20em;
-    bottom: 4em;
 }
 
 .search-bar input {
@@ -92,20 +73,21 @@ hr {
 /* User Table */
 .History-table {
     width: 100%; /* Ensure the table takes the full width */
-    margin: 15px auto;
     border-collapse: collapse;
-    margin-top: 5em;
 }
 
 .History-table th,
 .History-table td {
     text-align: left;
-    padding: 10px; /* Adjust padding for better appearance */
+    padding: 30px 10px; /* Adjust padding for better appearance */
 }
 
 .History-table th {
-    background-color: #f0f0f0;
+    background-color: #ff8533;
     font-weight: bold;
+    color: white;
+    position: sticky;
+    top: 0;
 
 }
 
