--- a/InventoryStyle.css
+++ b/InventoryStyle.css
@@ -4,14 +4,6 @@
     height: 65vh;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #f5f5f5;
-}
-
 .Inventory-box {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7); /* Subtle shadow effect */
     width: 100%;
@@ -58,7 +50,6 @@ hr {
     display: flex;
     flex-wrap: wrap;
     font-size: 16px;
-    margin: 20px  20px 5px 20px;
     padding: 10px 20px;
     border-radius: 30px;
     cursor: pointer;
@@ -87,6 +78,7 @@ hr {
     font-weight: bold;
     position: sticky;
     top: 0;
+    color: white;
 }
 
 .Inventory-table tr {
