--- a/ReaderStyle.css
+++ b/ReaderStyle.css
@@ -4,13 +4,6 @@
     height: 70vh; 
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #f5f5f5;
-}
-
 .Reader-box {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7); /* Subtle shadow effect */
     display: flex;
@@ -124,6 +117,7 @@ hr {
     font-weight: bold;
     position:sticky;
     top:0;
+    color: white;
 }
 /* Horizontal borders */
 .reader-table tr {
