--- a/TransactionBorrowed.css
+++ b/TransactionBorrowed.css
@@ -4,15 +4,6 @@
     height: 65vh;
 }
 
-.container {
-    background-color: red;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #f5f5f5;
-}
-
 .Borrowbox {
     display: flex;
     flex-direction: column;
@@ -23,6 +14,14 @@
     overflow-x: hidden; /* This line is fine */
 }
 
+.input {
+    display: flex; 
+    justify-content: flex-start;
+    gap: 10px;
+    top: 1em;
+    right: 20em;    
+    bottom: 4em;
+}
 
 .Borrbox {
     display: flex;
@@ -37,10 +36,11 @@
 }
 
 .Bglobal {
+    padding: 0 5%;
+    width: 100%;
     height: 22vh;
     background-color: white;
     display: flex;
-    justify-content: space-between; /* Space between book details and buttons */
     align-items: center; /* Center align items vertically */
 }
 #Total{
@@ -51,7 +51,6 @@
 .book-details {
     display: flex;
     flex-direction: column; /* Stack title and author vertically */
-    margin-right: 20em;
 }
 #btitle{
     font-weight: bold;
@@ -92,17 +91,6 @@
     border: 1px solid #ff6600;
 }
 
-/* Search */
-.input {
-    display: flex; 
-    justify-content: flex-start;
-    gap: 10px;
-    position: relative;
-    top: 1em;
-    right: 20em;    
-    bottom: 4em;
-}
-
 .search-bar input {
     width: 300px;
     height: 40px;
@@ -119,7 +107,30 @@
     position: absolute;
     left: 90%;
     top: 50%;
-    transform: translateY(-50%);
+    transform: 
+    translateY(-50%);
+}
+
+.view-borrowers {
+    background-color: white; /* Red for decline */
+    color: #ff6600;
+    border: 1px solid #ff6600;
+    height: 31px;
+    font-size: 14px;
+    padding: 5px 10px;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#sort-dropdown {
+    font-size: 16px;
+    padding: 8px 20px;
+    border-radius: 30px;
+    cursor: pointer;
+    background-color: #ff6600;
+    color: white;
+    width: 150px;
 }
 
 /* Buttons */
