--- a/TransactionsOverdue.css
+++ b/TransactionsOverdue.css
@@ -4,14 +4,6 @@
     height: 65vh;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #f5f5f5;
-}
-
 .Overdue-box {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7); /* Subtle shadow effect */
     display: flex;
@@ -44,8 +36,9 @@ hr {
 }
 
 .Overdue-table th {
-    background-color: #f0f0f0;
+    background-color: #ff8533;
     font-weight: bold;
+    color: white;
 }
 
 .Overdue-table tr {
