--- a/TransactionsReturned.css
+++ b/TransactionsReturned.css
@@ -4,17 +4,8 @@
     height: 65vh;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #f5f5f5;
-}
 
 .Returned-box {
-    display: flex;
-    flex-direction: column;
     width: 100%;
     height: 70vh;
     margin-top: 3.6em;
@@ -33,7 +24,6 @@ hr {
     background-color: #f5f5f5;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .Returned-table {
@@ -51,8 +41,9 @@ hr {
 }
 
 .Returned-table th {
-    background-color: #f5f5f5;
+    background-color: #ff8533;
     font-weight: bold;
+    color: white;
 }
 
 .Returned-table tr {
