--- a/TransactionsStyle.css
+++ b/TransactionsStyle.css
@@ -5,13 +5,12 @@
 }
 
 .container {
-    background-color: red;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     background-color: #f5f5f5;
-}
+}F
 
 .Trbox {
     display: flex;
@@ -24,10 +23,19 @@
     overflow-x: hidden;
 }
 
-.pendbox {
-    display: flex;
+#td1 {
+    padding: 0 1%;
     width: 100%;
-    align-items: center;
+    overflow-y: scroll;
+    height: 600px;
+}
+
+.pendbox-top {
+    display: flex;
+    height: 30px;
+}
+
+.pendbox {
     margin: 5px;
     border-radius: 10px;
 }
@@ -58,11 +66,12 @@
 }
 
 .global {
+    width: 100%;
     height: 18vh;
     background-color: white;
     display: flex;
-    justify-content: space-between; /* Space between book details and buttons */
     align-items: center; /* Center align items vertically */
+    padding: 0 5%;
 }
 
 .book-details {
@@ -124,7 +133,6 @@
     display: flex; 
     justify-content: flex-start;
     gap: 10px;
-    position: relative;
     top: 1em;
     right: 20em;    
     bottom: 4em;
@@ -163,19 +171,20 @@
     color: white;
 }
 
+
 .sort-btn {
     float: right;
 }
 
-/* .sort-btn img:hover {
-    filter: brightness(0) saturate(100%) invert(48%) sepia(96%) saturate(1150%) hue-rotate(10deg) brightness(96%) contrast(93%);
+#sort-dropdown {
+    font-size: 16px;
+    padding: 8px 20px;
+    border-radius: 30px;
+    cursor: pointer;
+    background-color: #ff6600;
+    color: white;
+    width: 150px;
 }
-
-.sort-btn:hover {
-    background-color: white;
-    color: #ff6600;
-    border: 1px solid #ff6600;
-} */
 
 .filter-btn {
     border: 1px solid #ff6600;
