--- a/dashStyle.css
+++ b/dashStyle.css
@@ -194,7 +194,7 @@ body, html {
     display: none;
     position: absolute;
     top: 80px; /* Adjust as needed */
-    width: 200px;
+    width: 400px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
@@ -212,6 +212,7 @@ body, html {
     color: black;
     padding: 0.5em;
     transition: background-color 0.3s ease;
+    border-bottom: 1px solid gray;
 }
 
 .notification-item:hover {
