--- a/ReadersInformation.css
+++ b/ReadersInformation.css
@@ -7,30 +7,41 @@
 .Readerbox {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 100%;
     height: 70vh;
     margin-top: 2em;
     background-color: #f5f5f5;
 }
 .Pdets{
-    margin-top: 3em;
+    margin-top: 6em;
 }
 
+.Readersinfo-table input {
+    width: 500px;
+    font-size: 16px; padding: 8px 20px;
+    border-radius: 30px;
+    cursor: pointer;
+    border: 1px solid #ff6600;
+    background-color: white;
+    color: #ff6600;
+}
 .Readbox {
     display: flex;
     width: 100%;
-    align-items: center;
     margin: 5px;
     border-radius: 10px;
 }
-#PboxView{
-    height: 40vh;
-}
 
+#PboxView {
+    flex-wrap: wrap;
+    height: 50vh;
+    align-content: center;
+}
 .Pview{
     display: flex;
     align-items: center ;
     flex-direction: column;
+    justify-content: center;
 }
 #profile-view h2{
     margin-top: 1em;
@@ -41,11 +52,13 @@
     margin-top: 2em;
 }
 #profile-details{
+    display:flex;
+    flex-wrap: wrap;
+    align-content: center;
     width: 50%;
     margin-left: 5em;
 }
 .Rglobal {
-    height: 30vh;
     background-color: white;
     display: flex;
 }
@@ -59,9 +72,11 @@
     padding: 10px 10px 5px 8px;
 }
 .upbtn{
+    flex-wrap: wrap;
+    display:flex;
 	margin-top: 2em;
     margin-right: 1em;
-   
+    justify-content: end;
 }
 
 .update-btn {
@@ -91,7 +106,6 @@
 }
 .ReadersInfo-details{
     width: 100%;
-    margin: 30px auto;
     border-collapse: collapse;
 }
 
@@ -104,16 +118,19 @@
 }
 
 .ReadersInfo-details th {
-    background-color: #f0f0f0;
+    background-color: #ff6600;
     font-weight: bold;
     text-align: center;
+    color: white;
+    top: 0;
+    position: sticky;
 }
 
 .ReadersInfo-details tr {
     border-bottom: 1px solid #7d6966;
 }
 #ReaderPan{
-    height: 30vh;
+    height: 50vh;
     overflow-y: auto;
     overflow-x: hidden;
 }
