--- a/dashStyle.css
+++ b/dashStyle.css
@@ -200,11 +200,14 @@ body, html {
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
     padding: 1em;
     z-index: 100;
+    height: 300px;
 }
 
 .notification-options {
     display: flex;
     flex-direction: column;
+    height: 300px;
+    overflow-y: scroll;
 }
 
 .notification-item {
